# software-3d

./: Cargo.toml  license  readme.md
platform/: Cargo.toml
platform/src/: application.rs  event.rs  frame_tracker.rs  input.rs  lib.rs  window.rs
platform/src/opengl/: buffer.rs  gl_window.rs  mod.rs  program.rs  texture.rs
platform/src/opengl/renderers/: egui_renderer.rs  mod.rs  pixel.frag  pixel.vert  pixel_renderer.rs
renderer/: Cargo.toml
renderer/src/: asset_manager.rs  camera.rs  colour.rs  framebuffer.rs  lib.rs  line.rs  renderer.rs  sat.rs  shapes.rs  tile.rs  util.rs
renderer/src/model/: mesh.rs  mod.rs  model.rs  triangle.rs  vertex.rs
renderer/src/texture/: bitmap.rs  mipmap.rs  mod.rs  texture.rs
src/: free_movement.rs  main.rs
